--- a/index.css
+++ b/index.css
@@ -24,6 +24,33 @@
     color: #700;
 }
 
+.previous-price
+{
+    color: rgba(128, 128, 128, .7);
+    text-decoration: line-through;
+}
+
+.category:before
+{
+    content: 'Категория: ';
+}
+
+.category:before
+{
+    opacity: .5;
+}
+
+.category span:hover
+{
+    color: #f08080;
+    opacity: .8;
+}
+
+.category
+{
+    font-size: 15px;
+}
+
 .cat-article:hover
 {
     background-color: rgba(139, 69, 19, .1);
@@ -50,12 +77,14 @@
 .list:checked ~ .cat-article
 {
     display: block;
+    margin: auto;
     width: fit-content;
 }
 
 .list:checked ~ .cat-article .information
 {
     width: 350px;
+    position: center;
 }
 
 .cat-article .description
